<resources>
    <string name="app_name">LPDM Expanded</string>
    <string name="login">Login</string>
    <string name="ldpm_expanded">LDPM Expanded</string>
    <string name="create_an_account">Create an Account</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="logout">Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="isLoggedIn">isLoggedIn</string>
    <string name="mPrefs">MyPrefs</string>
    <string name="user_info">user_info</string>
    <string name="admin">Admin</string>
    <string name="back">Back</string>
    <string name="grant_admin">Grant Admin</string>
    <string name="revoke_admin">Revoke Admin</string>
    <string name="admin_page">Admin Page</string>
    <string name="battle">BATTLE!</string>
    <string name="set_team">Set Team</string>
    <string name="add_monster">Add Monster</string>
    <string name="monster_name">Monster name</string>
    <string name="fire_lizard">Fire Lizard</string>
    <string name="weird_turtle">Weird Turtle</string>
    <string name="set_your_team">Set Your Team</string>
    <string name="create_monster">Create Monster</string>
    <string name="flower_dino">Flower Dino</string>
    <string name="electric_rat">Electric Rat</string>
    <string name="ability_select">Ability Select</string>
    <string name="get_warm">Get Warm</string>
    <string name="gentle_mist">Gentle Mist</string>
    <string name="static_shock">Static Shock</string>
    <string name="leaf_me_alone">Leaf Me Alone</string>
    <string name="punch_a_lot">Punch A Lot</string>
    <string name="random_ability">Random Ability</string>
    <string name="use_those_feet">Use Those Feet</string>
    <string name="attack">Attack</string>
    <string name="ability">Ability</string>
    <string name="exit">Exit</string>
</resources>