<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AbilitySelectActivity">

    <TextView
        android:id="@+id/app_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/ability_select"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leaf_Me_Alone_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/leaf_me_alone"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/get_Warm_button"
        app:layout_constraintTop_toBottomOf="@+id/app_label_textView" />

    <Button
        android:id="@+id/use_Those_Feet_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:text="@string/use_those_feet"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaf_Me_Alone_button" />


    <Button
        android:id="@+id/static_Shock_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="128dp"
        android:text="@string/static_shock"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/use_Those_Feet_button" />

    <Button
        android:id="@+id/get_Warm_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/get_warm"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/leaf_Me_Alone_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_label_textView" />

    <Button
        android:id="@+id/gentle_Mist_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/gentle_mist"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/use_Those_Feet_button"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_Warm_button" />

</androidx.constraintlayout.widget.ConstraintLayout>