<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateMonsterActivity">

    <TextView
        android:id="@+id/app_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/create_monster"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/back_button"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/monster_name_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/monster_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_label_textView" />

    <Button
        android:id="@+id/fire_lizard_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fire_lizard"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Flower_Dino_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monster_name_edit_text"
        app:layout_constraintVertical_bias="0.514" />

    <Button
        android:id="@+id/weird_turtle_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/weird_turtle"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/electric_rat_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fire_lizard_button"
        app:layout_constraintTop_toBottomOf="@+id/monster_name_edit_text" />

    <Button
        android:id="@+id/Flower_Dino_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="432dp"
        android:text="@string/flower_dino"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/electric_rat_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="432dp"
        android:text="@string/electric_rat"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toEndOf="@+id/Flower_Dino_button" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:text="@string/back"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>