<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <TextView
        android:id="@+id/app_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/ldpm_expanded"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/admin_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="224dp"
        android:text="@string/admin"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/team_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/set_team"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/create_monster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/battle_button"
        app:layout_constraintVertical_bias="0.041" />

    <Button
        android:id="@+id/create_monster"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/create_monster"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/admin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_button"
        app:layout_constraintVertical_bias="0.681" />

    <Button
        android:id="@+id/battle_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:text="@string/battle"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_label_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>