<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLandingPage">

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:hint="@string/username"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_label_textView" />

    <TextView
        android:id="@+id/app_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/admin_page"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/revoke_admin_button"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginEnd="40dp"
        android:text="@string/revoke_admin"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_text"
        app:layout_constraintVertical_bias="0.104"
        tools:visibility="visible" />

    <Button
        android:id="@+id/grant_admin_button"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:text="@string/grant_admin"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/revoke_admin_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_text"
        app:layout_constraintVertical_bias="0.104"
        tools:visibility="visible" />

    <Button
        android:id="@+id/backToLanding_button"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_text"
        app:layout_constraintVertical_bias="0.336"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>